# CalendarGPT

./: .gitignore  README.md  pyproject.toml
Tool_JSON/: create_calendar_event.json  get_calendar_events.json
src/calendar_agent/: __init__.py  calendar_functions.py  cli.py  main.py  server.py  twilio_functions.py
