[project]
name = "calendar-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ParthSareen", email = "parth@extensible.dev" }
]
dependencies = [
    "dagent >= 0.0.4",
    "twilio"
    ]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_agent"]
